--- a/partyboard/www/css/main.css
+++ b/partyboard/www/css/main.css
@@ -18,23 +18,28 @@
 }
 .contentPB .viewMessage {
   position: relative;
-  font-size: medium;
+  font-size: 3vh;
 }
 .obalMsg {
   margin-bottom: 1ch;
   position: relative;
   border-radius: 1ch;
-  margin-left: 1ch;
-  margin-right: 1ch;
+  margin-left: 1.5%;
+  margin-right: 1.5%;
+  display: table;
   color: white;
+  width: 97%;
 }
 .obsah {
   display: table-cell;
   padding: 1ch;
+  line-height: 1.1;
 }
 .buttona {
   display: table-cell;
-  vertical-align: top;
+  vertical-align: middle;
+  text-align: right;
+  font-size: 170%;
 }
 /****  registrace alert  ****/
 .error {
@@ -45,10 +50,8 @@
   display: inline;
 }
 .loadingClose {
-  position: relative;
-  top: -3ch;
-  right: -3.5ch;
-  margin-left: -3ch;
+  width: 100%;
+  margin-top: 2ch;
 }
 .hideButton {
   display: none;
