--- a/partyboard/www/templates/partyboard.html
+++ b/partyboard/www/templates/partyboard.html
@@ -1,8 +1,8 @@
-<ion-view class="backgroundColor" hide-back-button="true" view-title='{{"partyboard" | translate}}' ng-controller="PartyboardController">
-    <ion-nav-buttons side="left">
-        <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
-        </button>
-    </ion-nav-buttons>
+<ion-view class="backgroundColor" hide-back-button="false" view-title='{{"partyboard" | translate}}' ng-controller="PartyboardController">
+    <!--<ion-nav-buttons side="left">-->
+        <!--<button class="button button-icon button-clear ion-navicon" menu-toggle="left">-->
+        <!--</button>-->
+    <!--</ion-nav-buttons>-->
     <ion-nav-buttons side="right">
         <button class="button icon ion-gear-a" ng-class="{ 'hideButton': !userFactory.getPermissions().admin }"
                 ng-click="data.showAdministration = !data.showAdministration;"></button>
