--- a/partyboard/www/templates/login.html
+++ b/partyboard/www/templates/login.html
@@ -1,4 +1,4 @@
-<ion-view class="backgroundColor" nav-clear hide-back-button="true" hide-nav-bar="true" view-title='{{"login" | translate}}' ng-controller="LoginController">
+<ion-view class="backgroundColor" hide-nav-bar="true" view-title='{{"login" | translate}}' ng-controller="LoginController">
 
     <ion-content  class="has-header" padding="true">
         <img class="col text-center" src="./img/logo.png">
