--- a/partyboard/www/templates/setting.html
+++ b/partyboard/www/templates/setting.html
@@ -12,7 +12,7 @@
       </li>
       <li class="item item-input">
           <span class="input-label">{{"setNick" | translate}}</span>
-          <input ng-readonly="true" style="text-align: center; background-color: white;" ng-value="userFactory.getNick()" type="text">
+          <input ng-readonly="true" style="text-align: center; background-color: white;" ng-value="userFactory.nick" type="text">
       </li>
       <li class="item item-input item-select">
         <label>
