--- a/partyboard/www/templates/administration.html
+++ b/partyboard/www/templates/administration.html
@@ -1,5 +1,5 @@
-<ion-view  view-title='{{"administration" | translate}}' ng-controller="AdministrationController">
-
+<ion-view   ng-controller="AdministrationController">
+  <ion-nav-title> {{"administration" | translate}} </ion-nav-title>
   <ion-content>
     <ul class="list">
       <li class="item item-input item-select">
