--- a/partyboard/www/templates/info.html
+++ b/partyboard/www/templates/info.html
@@ -1,4 +1,5 @@
-<ion-view view-title='{{"info" | translate}}' ng-controller="InfoController">
+<ion-view ng-controller="InfoController">
+    <ion-nav-title> {{"info" | translate}} </ion-nav-title>
     <ion-content>
         <p>Proste tady budou nejaky kecy, obrazky atd...</p>
 
