--- a/partyboard/www/templates/login.html
+++ b/partyboard/www/templates/login.html
@@ -1,6 +1,6 @@
 <ion-view class="backgroundColor" hide-nav-bar="true" view-title='{{"login" | translate}}' ng-controller="LoginController">
 
-    <ion-content  class="has-header" padding="true">
+    <ion-content> <!-- class="has-header" padding="true"-->
         <img class="col text-center" src="./img/logo.png">
         <form class="list" ng-submit="doLogin()" name="loginForm" novalidate="">
             <ion-list >
@@ -13,7 +13,7 @@
                     <input type="password" name="password" ng-model="loginData.password" ng-init="loginData.password='root'" required>
                 </label>
             </ion-list>
-            <div style="width: 300px; height: 38px;" class="spacer"></div>
+            <div style="height: 2ch;" class="spacer"></div>
             <button class="button button-balanced button-block icon-left ion-log-in" ng-disabled="loginForm.$invalid" type="submit"> {{"login" | translate}}</button>
         </form>
         <!--<button style="margin-top: -25px;" class="button button-positive button-block  icon-left ion-social-facebook-outline" ng-click="loginFacebook()">Facebook</button>-->
