--- a/partyboard/www/templates/setting.html
+++ b/partyboard/www/templates/setting.html
@@ -1,5 +1,6 @@
-<ion-view view-title='{{"setting" | translate}}' ng-controller="SettingController">
-
+<ion-view ng-controller="SettingController">
+  <!--  Z DUVODU TOHO ZE SE NEMENIL view-title='{{"administration" | translate}}' PODLE ZVOLENEHO JAZYKA -->
+  <ion-nav-title> {{"setting" | translate}} </ion-nav-title>
   <ion-content>
     <ul class="list">
       <li class="item item-input item-select">
