--- a/partyboard/www/templates/administration.html
+++ b/partyboard/www/templates/administration.html
@@ -1,6 +1,6 @@
 <ion-view   ng-controller="AdministrationController">
   <ion-nav-title> {{"administration" | translate}} </ion-nav-title>
-  <ion-content>
+  <ion-content scroll="false">
     <ul class="list">
       <li class="item item-input item-select">
         <label>
