--- a/partyboard/www/templates/info.html
+++ b/partyboard/www/templates/info.html
@@ -1,6 +1,6 @@
 <ion-view ng-controller="InfoController">
     <ion-nav-title> {{"info" | translate}} </ion-nav-title>
-    <ion-content>
+    <ion-content scroll="false">
         <p>Proste tady budou nejaky kecy, obrazky atd...</p>
 
     </ion-content>
