--- a/partyboard/www/templates/setting.html
+++ b/partyboard/www/templates/setting.html
@@ -1,7 +1,7 @@
 <ion-view ng-controller="SettingController">
   <!--  Z DUVODU TOHO ZE SE NEMENIL view-title='{{"administration" | translate}}' PODLE ZVOLENEHO JAZYKA -->
   <ion-nav-title> {{"setting" | translate}} </ion-nav-title>
-  <ion-content>
+  <ion-content scroll="false">
     <ul class="list">
       <li class="item item-input item-select">
         <label>
