--- a/partyboard/www/templates/show.html
+++ b/partyboard/www/templates/show.html
@@ -1,5 +1,5 @@
 <ion-view class="backgroundColor" hide-nav-bar="true" view-title='{{"login" | translate}}' ng-controller="ShowController" >
-    <ion-content>
+    <ion-content scroll="false">
        <button ng-click="hideGo()">test</button>
     </ion-content>
 </ion-view>
