--- a/partyboard/less/main.less
+++ b/partyboard/less/main.less
@@ -1,4 +1,5 @@
 @backgroundColor: rgba(29, 29, 29, 0.98);
+@partyboardColor: #EC008C;
 
 .backgroundColor {
   background-color: @backgroundColor;
@@ -30,7 +31,7 @@
   }
 }
 
-.obalMsg{
+.obalMsg {
   margin-bottom: 1ch;
   position: relative;
   border-radius: 1ch;
@@ -41,13 +42,13 @@
   width: 97%;
 }
 
-.obsah{
-  display:table-cell;
+.obsah {
+  display: table-cell;
   padding: 1ch;
   //line-height: 1.1;
 }
 
-.buttona{
+.buttona {
   display: table-cell;
   vertical-align: middle;
   text-align: right;
@@ -64,7 +65,7 @@
   display: inline;
 }
 
-.loadingClose{
+.loadingClose {
   width: 100%;
   margin-top: 2ch;
 }
@@ -73,5 +74,24 @@
   display: none;
 }
 
+/**** show ***/
+.myCard {
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 4px;
+  border-color: @partyboardColor;
+  text-align: center;
+  div {
+    background-color: @backgroundColor;
+    color: white;
+  }
+}
 
+.ban {
+  // width: 150px;
+  //height: 150px;
+  background-image: url(../img/ban.png);
+  background-repeat: no-repeat;
+
+}
 
