--- a/partyboard/www/css/main.css
+++ b/partyboard/www/css/main.css
@@ -55,3 +55,19 @@
 .hideButton {
   display: none;
 }
+/**** show ***/
+.myCard {
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 4px;
+  border-color: #EC008C;
+  text-align: center;
+}
+.myCard div {
+  background-color: rgba(29, 29, 29, 0.98);
+  color: white;
+}
+.ban {
+  background-image: url(../img/ban.png);
+  background-repeat: no-repeat;
+}
