--- a/partyboard/www/templates/login.html
+++ b/partyboard/www/templates/login.html
@@ -1,6 +1,6 @@
 <ion-view class="backgroundColor" hide-nav-bar="true" view-title='{{"login" | translate}}' ng-controller="LoginController">
 
-    <ion-content scroll="false"> <!-- class="has-header" padding="true"-->
+    <ion-content has-header="true" padding="true" overflow-scroll="false">
         <img class="col text-center" src="./img/logo.png">
         <form class="list" ng-submit="doLogin()" name="loginForm" novalidate="">
             <ion-list >
