--- a/partyboard/www/templates/setting.html
+++ b/partyboard/www/templates/setting.html
@@ -1,6 +1,11 @@
 <ion-view ng-controller="SettingController">
   <!--  Z DUVODU TOHO ZE SE NEMENIL view-title='{{"administration" | translate}}' PODLE ZVOLENEHO JAZYKA -->
   <ion-nav-title> {{"setting" | translate}} </ion-nav-title>
+  <!--<ion-nav-buttons side="primary">   TLATICKO V PRAVO KTERY PAK BUDE NA BACK   -->
+    <!--<button class="button" ng-click="doSomething()">-->
+      <!--test-->
+    <!--</button>-->
+  <!--</ion-nav-buttons>-->
   <ion-content scroll="false">
     <ul class="list">
       <li class="item item-input item-select">
