--- a/partyboard/www/templates/registration.html
+++ b/partyboard/www/templates/registration.html
@@ -51,7 +51,7 @@
 
                 <label class="item item-input">
                     <span class="input-label">{{"birthday" | translate}} <i ng-class="{ 'has-error': registerForm.birthday.$invalid }" class="error icon ion-android-alert placeholder-icon"></i></span>
-                    <input type="date" name="birthday" ng-model="registerData.birthday" required>
+                    <input type="date" value="1998-01-01" name="birthday" ng-model="registerData.birthday" required>
                 </label>
                 <!--<label class="item item-input em-gender">-->
                     <!--<span class="input-label">{{"GENDER" | translate}} <i ng-class="{ 'has-error': !registerData.ge}" class="error icon ion-android-alert placeholder-icon"></i></span>-->
