--- a/partyboard/less/main.less
+++ b/partyboard/less/main.less
@@ -42,13 +42,13 @@
   width: 97%;
 }
 
-.obsah {
+.msg {
   display: table-cell;
   padding: 1ch;
   //line-height: 1.1;
 }
 
-.buttona {
+.buttMsg {
   display: table-cell;
   vertical-align: middle;
   text-align: right;
@@ -86,5 +86,6 @@
     color: white;
   }
 }
+
 
 
