--- a/partyboard/www/templates/partyboard.html
+++ b/partyboard/www/templates/partyboard.html
@@ -8,9 +8,10 @@
             <ionic-item class="viewMessage" ng-repeat="msg in result.slice().reverse()">
                 <!-- class="viewMessage" -->
                 <div class="obalMsg" style="background-color: {{colors.getRgbColor()}};">
-                    <div class="obsah">{{ msg.id_incomming_message}}:{{msg.nick}} - {{ msg.text }}</div>
-                    <div ng-class="{'hideButton': data.showAdministration===true}" class="buttona"><a
-                            class="ion-gear-a button-clear " ng-click="administration(msg)"></a></div>
+                    <div class="msg">{{ msg.id_incomming_message}}:{{msg.nick}} - {{ msg.text }}</div>
+                    <div ng-class="{'hideButton': data.showAdministration===true}" class="buttMsg">
+                        <a class="ion-gear-a button-clear " ng-click="administration(msg)"></a>
+                    </div>
                 </div>
             </ionic-item>
         </ionic-list>
