--- a/partyboard/www/templates/usersBan.html
+++ b/partyboard/www/templates/usersBan.html
@@ -1,19 +1,38 @@
 <ion-view class="backgroundColor" ng-controller="UsersBanController">
     <ion-nav-title> {{"usersBan" | translate}}</ion-nav-title>
     <ion-nav-buttons side="right">
-        <button class="button" ng-click="data.showReorder = !data.showReorder">
-            unBan
-        </button>
+        <!--<button class="button" ng-click="data.showReorder = !data.showReorder">-->
+            <!--unBan-->
+        <!--</button>-->
+        <button class="button icon ion-gear-a"
+                ng-click="data.showReorder = !data.showReorder"></button>
     </ion-nav-buttons>
     <ion-content has-bouncing="true" overflow-scroll="false">
         <ion-list show-reorder="data.showReorder">
-            <ion-item ng-repeat="item in items" item="item" class="item-right-editable">
-                <span ng-show="item.users.nick != null">  {{ item.users.nick }} -</span>
-                <span ng-show="item.users.nick == null">  {{ item.phone }} -</span>
-                {{ item.length_hour }} hod. - {{ item.create_ts }}
-                <ion-reorder-button  ng-click="unBan(item)" style="background-image: url('img/unban.png'); background-size: 90%; background-repeat: no-repeat;
-                background-position: 50%; " on-reorder="false" draggable="null"></ion-reorder-button>
-            </ion-item>
+            <!--<ion-item ng-repeat="item in items" item="item" class="item-right-editable">-->
+                <!--<span ng-show="item.users.nick != null">  {{ item.users.nick }} -</span>-->
+                <!--<span ng-show="item.users.nick == null">  {{ item.phone }} -</span>-->
+                <!--{{ item.length_hour }} hod. - {{ item.create_ts }}-->
+                <!--<ion-reorder-button  ng-click="unBan(item)" style="background-image: url('img/unban.png'); background-size: 90%; background-repeat: no-repeat;-->
+                <!--background-position: 50%; " on-reorder="false" draggable="null"></ion-reorder-button>-->
+            <!--</ion-item>-->
+
+            <ionic-item class="viewMessage" ng-repeat="item in items" item="item">
+                <!-- class="viewMessage" -->
+                <div class="obalMsg" style="    box-shadow: inset 0px -7px 11px -8px rgba(255,255,255,0.7); border-radius: 0ch !important;">
+                    <div class="msg" style="vertical-align: top !important; ">
+                        <span ng-show="item.users.nick != null">  {{ item.users.nick }} -</span>
+                        <span ng-show="item.users.nick == null">  {{ item.phone }} -</span>
+                        {{ item.length_hour }} hod. - {{ item.create_ts }}
+                        <div>{{ item.description }}</div>
+                    </div>
+
+                    <button ng-class="{'hideButton': data.showReorder===true}" class="button-clear" ng-click="unBan(item)"
+                            style="background-image: url('img/unban.png');     min-width: 10vh; min-height: 10vh; background-position: 50% 50%; background-repeat: no-repeat;">
+
+                    </button>
+                </div>
+            </ionic-item>
         </ion-list>
     </ion-content>
 </ion-view>
