--- a/partyboard/www/templates/administration.html
+++ b/partyboard/www/templates/administration.html
@@ -6,18 +6,18 @@
       <li class="item item-input item-select">
         <label>
           <div class="input-label">
-            {{"colors" | translate}}
+            {{"colorBack" | translate}}
           </div>
-          <select ng-change="colorChangeBackground(colorBack)" ng-model="colorBack" ng-options="color.name for color in colors"></select>
+          <select ng-change="colorChangeBackground(data.colorBack)" ng-model="data.colorBack" ng-options="color.name for color in colors"></select>
         </label>
       </li>
       <li class="item item-divider"></li>
       <li class="item item-input item-select">
         <label>
           <div class="input-label">
-            {{"colors" | translate}}
+            {{"colorText" | translate}}
           </div>
-          <select ng-change="colorChangeText(colorText)" ng-model="colorText" ng-options="color.name for color in colors"></select>
+          <select ng-change="colorChangeText(data.colorText)" ng-model="data.colorText" ng-options="color.name for color in colors"></select>
         </label>
       </li>
 
