--- a/partyboard/www/templates/setting.html
+++ b/partyboard/www/templates/setting.html
@@ -6,7 +6,7 @@
       <!--test-->
     <!--</button>-->
   <!--</ion-nav-buttons>-->
-  <ion-content scroll="false">
+  <ion-content scroll="false" has-header="true" padding="true">
     <ul class="list">
       <li class="item item-input item-select">
         <label>
