--- a/partyboard/www/templates/registration.html
+++ b/partyboard/www/templates/registration.html
@@ -14,17 +14,17 @@
 
                 <label class="item item-input">
                     <span class="input-label">{{"email" | translate}} <i ng-class="{ 'has-error': registerForm.email.$invalid }" class="error icon ion-android-alert placeholder-icon"></i></span>
-                    <input type="email" name="email" ng-model="registerData.email" ng-pattern="/^[_a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,4})$/" required>
+                    <input type="email" name="email" ng-model="registerData.email" maxlength="60" ng-pattern="/^[_a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,4})$/" required>
                 </label>
 
                 <label class="item item-input">
                     <span class="input-label">{{"password" | translate}} <i ng-class="{ 'has-error': registerForm.password.$invalid }" class="error icon ion-android-alert placeholder-icon"></i></span>
-                    <input type="password" name="password" ng-model="registerData.password" required>
+                    <input type="password" name="password" ng-model="registerData.password" required maxlength="20">
                 </label>
 
                 <label class="item item-input">
                     <span class="input-label">{{"checkPassword" | translate}} <i ng-class="{ 'has-error': registerForm.checkPassword.$invalid}" class="error icon ion-android-alert placeholder-icon"></i></span>
-                    <input type="password" name="checkPassword" ng-model="registerData.checkPassword" required> <!-- registerForm.checkPassword.$invalid || ( -->
+                    <input type="password" name="checkPassword" ng-model="registerData.checkPassword" required maxlength="20"> <!-- registerForm.checkPassword.$invalid || ( -->
                 </label>
 
                 <label class="item item-divider"></label>
