--- a/partyboard/www/templates/usersBan.html
+++ b/partyboard/www/templates/usersBan.html
@@ -5,10 +5,10 @@
             <!--unBan-->
         <!--</button>-->
         <button class="button icon ion-gear-a"
-                ng-click="data.showReorder = !data.showReorder"></button>
+                ng-click="data.showButton = !data.showButton"></button>
     </ion-nav-buttons>
     <ion-content has-bouncing="true" overflow-scroll="false">
-        <ion-list show-reorder="data.showReorder">
+        <ion-list>
             <!--<ion-item ng-repeat="item in items" item="item" class="item-right-editable">-->
                 <!--<span ng-show="item.users.nick != null">  {{ item.users.nick }} -</span>-->
                 <!--<span ng-show="item.users.nick == null">  {{ item.phone }} -</span>-->
@@ -17,7 +17,7 @@
                 <!--background-position: 50%; " on-reorder="false" draggable="null"></ion-reorder-button>-->
             <!--</ion-item>-->
 
-            <ionic-item class="viewMessage" ng-repeat="item in items" item="item">
+            <ionic-item class="viewMessage" ng-repeat="item in items.slice().reverse()" item="item">
                 <!-- class="viewMessage" -->
                 <div class="obalMsg" style="    box-shadow: inset 0px -7px 11px -8px rgba(255,255,255,0.7); border-radius: 0ch !important;">
                     <div class="msg" style="vertical-align: top !important; ">
@@ -27,8 +27,8 @@
                         <div>{{ item.description }}</div>
                     </div>
 
-                    <button ng-class="{'hideButton': data.showReorder===true}" class="button-clear" ng-click="unBan(item)"
-                            style="background-image: url('img/unban.png');     min-width: 10vh; min-height: 10vh; background-position: 50% 50%; background-repeat: no-repeat;">
+                    <button ng-class="{'hideButton': data.showButton===true}" class="button-clear" ng-click="unBan(item)"
+                            style="background-image: url('img/unban1.png');     min-width: 10vh; min-height: 10vh; background-position: 50% 50%; background-repeat: no-repeat;">
 
                     </button>
                 </div>
