--- a/partyboard/www/templates/usersBan.html
+++ b/partyboard/www/templates/usersBan.html
@@ -28,7 +28,7 @@
                     </div>
 
                     <button ng-class="{'hideButton': data.showButton===true}" class="button-clear" ng-click="unBan(item)"
-                            style="background-image: url('img/unban1.png');     min-width: 10vh; min-height: 10vh; background-position: 50% 50%; background-repeat: no-repeat;">
+                            style="background-image: url('img/unban1.png'); min-width: 6ch; display: table-cell; background-position: 50% 50%; min-height:6ch; background-repeat: no-repeat;">
 
                     </button>
                 </div>
